src/objects/Blocked_Action__c.object
<CustomObject>
    <description>Object meant to hold actions that could not be completed. Initially created for the attempted insert or deletion of Device Applications but it could be expanded to other objects. Maybe with different record types.</description>
    <fields>
        <fullName>Action_Attempted__c</fullName>
        <description>Was the action that could not be completed a record insert or a record delete.</description>
        <inlineHelpText>Was the action that could not be completed a record insert or a record delete.</inlineHelpText>
        <label>Action Attempted</label>
        <picklist>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Source_Id__c</fullName>
        <description>Origination point for this application. For example if Source is a Core, origination point might actually be a Program that was added to a Stable that is now on the Core that is the source.</description>
        <inlineHelpText>Origination point for this application. For example if Source is a Core, origination point might actually be a Program that was added to a Stable that is now on the Core that is the source.</inlineHelpText>
        <label>Application Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If blocked action is for a Device Application what is the Application?</description>
        <inlineHelpText>If blocked action is for a Device Application what is the Application?</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Blocked Actions</relationshipLabel>
        <relationshipName>Blocked_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Application_if_delete__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If action was to delete a Device Application record this is the record that could not be deleted.</description>
        <inlineHelpText>If action was to delete a Device Application record this is the record that could not be deleted.</inlineHelpText>
        <label>Device Application (if delete)</label>
        <referenceTo>DeviceApplicationAssoc__c</referenceTo>
        <relationshipLabel>Blocked Actions</relationshipLabel>
        <relationshipName>Blocked_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If blocked action is for a Device Application what is the Device?</description>
        <inlineHelpText>If blocked action is for a Device Application what is the Device?</inlineHelpText>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Blocked Actions</relationshipLabel>
        <relationshipName>Blocked_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <description>SFDC Id of the source of this Application. Meaning if this Application is on a Device, the source might be a Core that the Device is using, or maybe a Program that was added directly to the Device.</description>
        <inlineHelpText>SFDC Id of the source of this Application. Meaning if this Application is on a Device, the source might be a Core that the Device is using, or maybe a Program that was added directly to the Device.</inlineHelpText>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <description>Used along with Source Id to create link in Source formula field.</description>
        <inlineHelpText>Name of the record that is the Source Id.</inlineHelpText>
        <label>Source Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Link to the Source of this record. For example if Device Application record source might be a Core that is used on Device or a Program that was added directly to the Device.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Source_Id__c , Source_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the Source of this record. For example if Device Application record source might be a Core that is used on Device or a Program that was added directly to the Device.</inlineHelpText>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <label>Blocked Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BAN-{0000000000}</displayFormat>
        <label>Blocked Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocked Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>